# python-batyr-petr

./: LICENSE  Procfile  codebasics.py  main.py  models.py  pyproject.toml  tests.py
app/: codebasics.py  config.py  dependencies.py  main.py  models.py  schemas.py  tasks.py
