[tool.poetry]
name = "python-batyr-petr"
version = "0.1.0"
description = ""
authors = ["petyatarasov <112955136+petyatarasov@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "python_batyr_petr"}]

[tool.poetry.dependencies]
python = "3.10.6"
fastapi = "^0.82.0"
pytest = "^7.1.3"
peewee = "^3.15.2"
psycopg2-binary = "^2.9.3"
environs = "^9.5.0"
uvicorn = "^0.18.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
